# vk-utils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  chain.hpp  cmake_pch.cxx  cmake_pch.hpp  cmake_pch.hxx  cpp21.hpp  index.js  link.hpp  output.json  package-lock.json  package.json  sizes.h  structs.hpp  test.cmd  test.cpp  utils.hpp  vk-utils.hpp
cpp21/: bool32.hpp  bucket.hpp  core.hpp  data_view.hpp  fn_helper.hpp  interval_map.hpp  legacy.hpp  link.hpp  memory_stack.hpp  of_shared.hpp  optional_ref.hpp  self_copy.hpp  shared_of.hpp  void.hpp  wrap_ptr.hpp
test/: test.cpp
